package edu.xanderson.PatoCritico.model.enums;

public enum UsuarioEstadoEnum {
    ATIVO,
    INATIVO,
    PENDENTE
}
